css/language_mili.css
/* ==============
   Language list (body class)
   ==============
    en-us
    en-uk
    ar
    es-mx
    es
    fr
    de
    ko
    el
    he
    it
    pt
    ru
    cn
    tr
    vi
  ==============*/


 /*Greek*/
  .el .feature_circle .circle_creator_area, 
  .tr .feature_circle .circle_creator_area {
    font-size: .6em;
  }
  .el .feature_circle .circle_of_strength, 
  .tr .feature_circle .circle_of_strength {
    font-size: 1.1em;
  }

  .el .feature_circle{
    height:230px;
  }

  .el .confirm_content, .ru .confirm_content{
    padding:0 20% 0 20%;
  }

  .el #create_another_circle, 
  .ru #create_another_circle,
  .de #create_another_circle

  {
    font-size:.6em;
  }

  .el #log_in_upload_photo_btn, 
  .ru #log_in_upload_photo_btn,
  .de #log_in_upload_photo_btn
  {
    font-size:.6em;
  }

  .el #thank_you p, 
  .it #thank_you p, 
  .pt #thank_you p, 
  .ru #thank_you p,
  .vi #thank_you p
  {
    font-size:1.1em;
  }

  .el .popup #popup_circle_modal #goal, 
  .it .popup #popup_circle_modal #goal, 
  .pt .popup #popup_circle_modal #goal, 
  .ru .popup #popup_circle_modal #goal, 
  .tr .popup #popup_circle_modal #goal,
  .vi .popup #popup_circle_modal #goal
  {
    font-size:30%;
  }

  .el .feature_circle .circle_goal, 
  .it .feature_circle .circle_goal, 
  .pt .feature_circle .circle_goal,
  .vi .feature_circle .circle_goal,
  .tr .feature_circle .circle_goal
  {
    font-size:.6em;
  }

  .el .gallery_circle .circle_goal, 
  .it .gallery_circle .circle_goal, 
  .pt .gallery_circle .circle_goal, 
  .ru .gallery_circle .circle_goal,
  .tr .gallery_circle .circle_goal,
  .vi .gallery_circle .circle_goal
  {
    font-size:.9em;
    line-height: 1.2em;
  }

  .el .popup #popup_photo_upload_agreement_window h2, 
  .ru .popup #popup_photo_upload_agreement_window h2{
    margin:40px 0 20px 0;
  }

  .el #tagline {
      top: 70px;
  }

  /*Italian*/


  .it #tagline {
      top: 75px;
  }

  .it .popup #popup_circle_modal #popup_footer_share, 
  .pt .popup #popup_circle_modal #popup_footer_share{
    width:130px;
  }


  .it .popup #popup_circle_modal #popup_footer_share{
    font-size:12px;
  }

  .it #join_fight, .it #join_fight_content{
    display:none;
  }

  .it #watch_video{
    background:none;
    padding:0 40%;
  }


  .it .popup #popup_footer_share li, 
  .ru .popup #popup_footer_share li{
    margin-left:2px;
  }

  /*Hebrew*/

  .he #tagline {
      top: 140px;
  }

  /*Portuguese*/
  .pt #tagline {
      top: 75px;
  }

  .pt #donate_pink_btn{
    font-size:10px;
  }

  .pt #join_fight_text{
    font-size:.7em;
  }

  /*Russian*/
  .ru #tagline {
      top: 75px;
  }

  .ru .feature_circle .circle_goal{
    font-size:.55em;
  }

  .ru .popup #popup_circle_modal #popup_footer_share{
    width:140px;
    font-size:8px;
  }

 .ru .confirm_content p,
 .el .confirm_content p
 {
    font-size:.7em;
 }

 .ru #donate_pink_btn{
    font-size:9px;
  }

  .ru #join_fight_text, .de #join_fight_text{
    font-size:.6em;
  }

  .ru #join_fight_content{
    font-size:.7em;
  }

  .ru #join_fight, .hu #join_fight{
    padding-left:13%;
    width:14%;
  }

  .hu #donate_pink_btn{
    font-size:11px;
  }

  .hu #join_fight_text{
    font-size:.8em;
  }

  /*chinese*/
  .cn #join_fight_text{
    font-size:.7em;
  }

  .cn .stronger_together {
    line-height: 1.3em;
  } 

  .cn .tributton_mid_wrapper{
    width:17%;
  }

  /*turkish*/

  .tr .popup #popup_circle_modal #popup_footer_share,
  .vi .popup #popup_circle_modal #popup_footer_share
  {
    width:120px;
    font-size:8px;
  }

  /*vietnamese*/
  .vi .stronger_together, .es .stronger_together{
    letter-spacing: -1px;
  }

  .vi #tagline {
      top: 85px;
  }

  .vi #donate_pink_btn{
    font-size:9px;
  }

  .vi #join_fight_text{
    font-size:.7em;
  }

  .vi #join_fight_content{
    font-size:.7em;
  }

  .fr #create_another_circle
  {
    font-size:.75em;
  }

  .fr #log_in_upload_photo_btn
  {
    font-size:.75em;
  }


@media only screen and (min-width: 360px) {

/* ===============
    Smartphone (360px)
   =============== */
	
}

@media only screen and (min-width: 480px)  {

/* ===============
    Smartphone (480px)
   =============== */

/*Greek*/
  .el .feature_circle .circle_creator_area, 
  .tr .feature_circle .circle_creator_area {
    font-size: 1em;
  }
  .el .feature_circle .circle_of_strength, 
  .tr .feature_circle .circle_of_strength {
    font-size: 1.6em;
  }

  .el #friend_list{
    font-size:2.4em;
  }

  .el .feature_circle{
    height:360px;
  }

  .el .popup #popup_circle_modal #goal, 
  .it .popup #popup_circle_modal #goal, 
  .pt .popup #popup_circle_modal #goal, 
  .ru .popup #popup_circle_modal #goal, 
  .tr .popup #popup_circle_modal #goal,
  .vi .popup #popup_circle_modal #goal
  {
    font-size:40%;
  }

  .el .feature_circle .circle_goal, 
  .it .feature_circle .circle_goal, 
  .pt .feature_circle .circle_goal,
  .vi .feature_circle .circle_goal,
  .tr .feature_circle .circle_goal
  {
    font-size:.8em;
  }

  .el .gallery_circle .circle_goal, 
  .it .gallery_circle .circle_goal, 
  .pt .gallery_circle .circle_goal,
  .tr .gallery_circle .circle_goal,
  .vi .gallery_circle .circle_goal
  {
    font-size:1.1em;
  }

  .el #tagline {
      top: 150px;
  }


  /*Italian*/


  .it #tagline {
      top: 140px;
  }


  /*Hebrew*/

  .he #tagline {
      top: 220px;
  }

  /*Portuguese*/
  .pt #tagline {
      top: 140px;
  }

  /*Russian*/
  .ru #tagline {
      top: 140px;
  }

  .ru .popup #popup_circle_modal #popup_footer_share,
  .tr .popup #popup_circle_modal #popup_footer_share,
  .vi .popup #popup_circle_modal #popup_footer_share
  {
    font-size:12px;
  }

  .ru .feature_circle .circle_goal{
    font-size:.8em;
  }

  .ru .gallery_circle .circle_goal{
    font-size:1.1em;
  }

  .ru .confirm_content p,
  .el .confirm_content p
  {
    font-size:.9em;
 }

 /*vietnamese*/

  .vi #tagline {
      top: 150px;
  }


}

@media only screen and (min-width: 640px)  {

/* ===============
    Smartphone (640px)
   =============== */


  /*Greek*/

  .el .feature_circle{
    height:420px;
  }

  .el #thank_you p, 
  .it #thank_you p, 
  .pt #thank_you p, 
  .ru #thank_you p,
  .vi #thank_you p
  {
    font-size:1.4em;
  }

  .el .popup #popup_circle_modal #goal, 
  .it .popup #popup_circle_modal #goal, 
  .pt .popup #popup_circle_modal #goal, 
  .ru .popup #popup_circle_modal #goal, 
  .tr .popup #popup_circle_modal #goal,
  .vi .popup #popup_circle_modal #goal
  {
    font-size:60%;
  }

  .el #tagline {
      top: 220px;
  }


   /*Hebrew*/

  .he #tagline {
      top: 290px;
  }

  /*Portuguese*/
  .pt #tagline {
      top: 220px;
  }

  /*Russian*/
  .ru #tagline {
      top: 210px;
  }

  .ru .feature_circle .circle_goal{
    font-size:.95em;
  }

   /*vietnamese*/

  .vi #tagline {
      top: 220px;
  }


}


@media only screen and (min-width:768px) {

/* ===============
    Tablet (768px)
   =============== */

.ru .confirm_content p,
.el .confirm_content p
{
    font-size:1em;
 }

 .el #create_another_circle, 
  .ru #create_another_circle,
  .de #create_another_circle

  {
    font-size:.65em;
  }

  .el #log_in_upload_photo_btn, 
  .ru #log_in_upload_photo_btn,
  .de #log_in_upload_photo_btn
  {
    font-size:.65em;
  }
   

}


@media only screen and (min-width:980px) {

/* ===============
    Tablet (980px)
   =============== */

       /*Greek*/

  .el .feature_circle{
    height:320px;
  }

  .el .popup #popup_circle_modal #goal, 
  .it .popup #popup_circle_modal #goal, 
  .pt .popup #popup_circle_modal #goal, 
  .ru .popup #popup_circle_modal #goal,
  .tr .popup #popup_circle_modal #goal,
  .vi .popup #popup_circle_modal #goal
  {
    font-size:80%;
  }

  .el #create_another_circle, 
  .ru #create_another_circle,
  .de #create_another_circle

  {
    font-size:.5em;
  }

  .el #log_in_upload_photo_btn, 
  .ru #log_in_upload_photo_btn,
  .de #log_in_upload_photo_btn
  {
    font-size:.5em;
  }

  .el #join_fight_text{
    font-size:.6em;
  }

   .el #tagline {
      top: 160px;
  }

    /*Italian*/


  .it #tagline {
      top: 170px;
  }

   /*Hebrew*/

  .he #tagline {
      top: 240px;
  }

  /*Portuguese*/
  .pt #tagline {
      top: 160px;
  }

  /*Russian*/
  .ru #tagline {
      top: 140px;
  }

  /*Vietnamese*/
  .vi #tagline {
      top: 150px;
  }

  .de #tagline {
      top: 150px;
  }

  .fr .stronger_together, .es .stronger_together {
    font-size: 2.8em;
  } 

  .fr #create_another_circle
  {
    font-size:.7em;
  }

  .fr #log_in_upload_photo_btn
  {
    font-size:.7em;
  }

  .cn .tributton_mid_wrapper{
    width:10%;
  }



    
}


@media only screen and (min-width: 1024px) {

/* ===============
    Tablet (1024px)
   =============== */

.el .feature_circle{
    height:346px;
  }

  .el .gallery_circle .circle_goal, 
  .it .gallery_circle .circle_goal, 
  .pt .gallery_circle .circle_goal,
  .tr .gallery_circle .circle_goal,
  .vi .gallery_circle .circle_goal
  {
    font-size:1.2em;
  }

}


@media only screen and (min-width: 1200px)  {

/* ===============
    Tablet (1200px)
   =============== */

  /*Greek*/

  .el .feature_circle .circle_goal, 
  .it .feature_circle .circle_goal, 
  .pt .feature_circle .circle_goal,
  .vi .feature_circle .circle_goal,
  .tr .feature_circle .circle_goal
  {
    font-size:1em;
  }

  .el #join_fight_text{
    font-size:.7em;
  }

  .el #create_another_circle,
  .ru #create_another_circle,
  .de #create_another_circle
  {
    font-size:.7em;
  }

  .el #log_in_upload_photo_btn,
  .ru #log_in_upload_photo_btn,
  .de #log_in_upload_photo_btn
  {
    font-size:.7em;
  }

  .el .feature_circle{
    height:420px;
  }

  .el #tagline {
      top: 200px;
  }

  /*Italian*/

  .it #tagline {
      top: 220px;
  }

   /*Hebrew*/

  .he #tagline {
      top: 270px;
  }

  /*Portuguese*/
  .pt #tagline {
      top: 220px;
  }

  /*Russian*/
  .ru #tagline {
      top: 210px;
  }

  /*Vietnamese*/
  .vi #tagline {
      top: 220px;
  }

  .de #tagline {
      top: 220px;
  }

  .fr .stronger_together, .es .stronger_together {
    font-size: 3.2em;
  }  

  .fr #create_another_circle
  {
    font-size:.75em;
  }

  .fr #log_in_upload_photo_btn
  {
    font-size:.75em;
  }





}

